src/bgworker/snapshots/roco_rs__bgworker__pg__tests__can_enqueue.snap
---
source: src/bgworker/pg.rs
expression: jobs
snapshot_kind: text
---
[
    Job {
        id: "<REDACTED>",
        name: "PasswordChangeNotification",
        data: Object {
            "user_id": Number(1),
        },
        status: Queued,
        run_at: <REDACTED>,
        interval: None,
        created_at: Some(
            <REDACTED>,
        ),
        updated_at: Some(
            <REDACTED>,
        ),
        tags: None,
    },
]
